Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-1682

Lua plugin doesn't compile on some older versions of GCC

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 3.3.2
    • Plugins
    • None

    Description

      gmake[2]: Entering directory `/tmp/org.apache.trafficserver.7634/obj/plugins/experimental/lua'
        CXX      lua_la-hook.lo
      cc1plus: warnings being treated as errors
      /home/igalic/src/asf/trafficserver/plugins/experimental/lua/hook.cc: In function 'const char* HttpHookName(TSHttpHookID)':
      /home/igalic/src/asf/trafficserver/plugins/experimental/lua/hook.cc:62: warning: comparison between signed and unsigned integer expressions
      gmake[2]: *** [lua_la-hook.lo] Error 1
      

      Attachments

        1. lua_cast_tshttphookid.patch
          0.4 kB
          Igor Galić

        Activity

          People

            i.galic Igor Galić
            i.galic Igor Galić
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: